# tslox

./: .gitignore  .prettierrc  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.build.json
.github/workflows/: testAndCoverage.yml
rox/: Cargo.toml
rox/src/: lib.rs  main.rs
rox/src/ast/: expression.rs  mod.rs  operator.rs  span.rs  statement.rs
rox/src/grammar/: grammar.g
rox/src/lexer/: keyword.rs  mod.rs  reader.rs  token.rs  token_kind.rs
rox/src/lox_error/: mod.rs
rox/src/parser/: mod.rs
src/: AstToString.ts  Function.ts  index.ts
src/environment/: index.ts
src/error/: LoxError.ts  Return.ts
src/expression/: expression.d.ts  index.ts
src/helpers/: parser.ts  token.ts
src/interpreter/: index.ts
src/loxCode/: block.lox  if.lox  justExpression.lox  logical.lox  statements.lox
src/parser/: index.ts
src/statement/: index.ts
src/tokenizer/: Token.ts  TokenType.ts  tokenizer.ts
src/types/: index.d.ts
test/: expression.test.ts  parser.test.ts  statement.test.ts  tokenizer.test.ts
tool/: GenerateAst.ts
tox/: jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
tox/coverage/: clover.xml  coverage-final.json  lcov.info
tox/src/: index.ts  setup.ts
tox/test/: statement.test.ts  tokenizer.test.ts
tox/tool/: GenerateAst.ts
website/: .eslintrc.cjs  index.html  package.json  tailwind.config.js
website/lang/: lang.ts  lox.grammar  parser.js  parser.terms.js
website/src/: App.tsx  index.css  main.tsx  store.ts
www/: index.html  package.json  tailwind.config.js
www/src/: index.css
(+75 files in other folders)
