[package]
name = "rox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bumpalo = { version = "3.16.0", features = ["boxed", "collections", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
serde_with = "3.11.0"
wasm-bindgen = "0.2.93"
